Calculate text and window size from LC_CTYPE instead of LC_TIME

LC_TIME only defines what will be displayed, LC_CTYPE is what defines
the character encoding.

References:

  Bug 15903 - LANG=en_US xclock -digital -font fixed has wrong size
  https://bugs.freedesktop.org/show_bug.cgi?id=15903

Reviewed-by: Julien Cristau <jcristau@debian.org>
Reviewed-by: Jeremy Huddleston <jeremyhu@apple.com>